se configura la base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#GENERAL
+server.port = 8080
 
+spring.data.mongodb.uri=mongodb+srv://Lmfront-end:wrndPpqZp3j9QlXx@apidisney.x81ys.mongodb.net/test
+spring.data.mongodb.database= api_disney
+spring.main.allow-bean-definition-overriding=true
